#10 - Modify Post & Post Add html page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/blog
 spring.datasource.username=postgres
 spring.datasource.password=root
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.validationQuery=SELECT 1
 #hibernate/jpa
 spring.jpa.database=POSTGRESQL
